css styling for pc

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -25,3 +25,15 @@
    
 }
 
+@media only screen and (min-width: 800px) {
+   
+   .navbar{
+    display: flex;
+    justify-content: center;
+   }
+   .navIcon{
+    padding-left:150px;
+    padding-right:150px;
+   }
+  }
+
