--- a/src/pages/Create/Create.css
+++ b/src/pages/Create/Create.css
@@ -66,3 +66,19 @@
     margin-right: 3vw;
    }
 
+   @media only screen and (min-width: 800px) {
+    #planMaker{
+        max-width: 800px;
+    }
+    #newAction{
+        max-width: 700px;
+    }
+     .toDoTasks{
+        margin: 50px;
+     }
+     .planName{
+        margin-left: calc(30vw);
+     }
+
+   }
+
