--- a/src/pages/Calendar/Calendar.css
+++ b/src/pages/Calendar/Calendar.css
@@ -35,7 +35,16 @@
   flex-direction: column;
     /* position: relative; */
     z-index:1;
+    text-decoration: none;
     
+    }
+
+    .scheduledPlan:hover{
+      background-color: rgb(239, 41, 94);
+    }
+
+    .nextprev{
+      cursor: pointer;
     }
 
  .dailyTask{
@@ -58,8 +67,12 @@
     padding-right: 1.65vh;
     /* position: relative; */
     z-index: 1;
+    cursor: pointer;
     
 
+  }
+  .delete:hover{
+    color:black;
   }
   
  
@@ -105,6 +118,27 @@
      height: 11vh;
      /* margin-top: 0.5vh; */
      border-radius: 3vw;
+  }
+
+  .addDayPlan{
+    font-size: 2rem;
+    height: 5vh;
+    margin-top: 2vh;
+    width: 5vh;
+    border-radius: 1vw;
+    border: none;
+    cursor: pointer;
+    background-color:rgb(145, 70, 213);
+    color:white;
+  }
+  .addDayPlanBox{
+    z-index: 2;
+    background-color: white;
+  }
+
+
+  .hidden{
+    display: none;
   }
   
   @media only screen and (min-width: 800px) {
