--- a/src/pages/Settings/Settings.css
+++ b/src/pages/Settings/Settings.css
@@ -11,6 +11,24 @@ display: none;
     right:7vw;
     font-size: 1.25em;
 }
+.confirmNo{
+    background-color: transparent;
+    color: blue;
+    font-size: 1.25rem;
+    border: none;
+    margin-right: 4vh;
+    margin-left: 20vw;
+    padding: 1vh;
+    cursor: pointer;
+}
+.confirmYes{
+   background-color: transparent;
+   color:red;
+   border: none;
+    padding: 1vh;
+    cursor: pointer;
+    font-size: 1.25rem;
+}
 
 .Settings{
     background-color: white;
@@ -40,6 +58,11 @@ display: none;
     width: 87vw;
     padding: 1vw;
     border-radius: 1vw;
+    cursor: pointer;
+}
+
+.save:hover{
+   background-color: rgba(9, 159, 254);
 }
 
 .heading{
@@ -59,6 +82,9 @@ display: none;
     margin-right: 5vw;
 }
 
+
+
+
 .socials{
     color:black;
     display:inline;
@@ -71,6 +97,19 @@ display: none;
     padding: 2vw;
     margin-left: 2.5vw;
     margin-top: 4vh;
+    cursor: pointer;
+    max-height: 8px;
+}
+.logOut:hover{
+    background-color: rgba(9, 159, 254);
+}
+
+.socials:hover{
+    color: rgba(9, 159, 254);
+}
+
+.icon-tabler-chevron-down{
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 800px) {
@@ -83,12 +122,13 @@ display: none;
     }
     .name{
         max-width: 300px;
+        max-height: 8px;
     }
     .save{
         max-width: 700px;
     }
     .warning{
-        max-width: 700px;
+        max-width:800px;
         position: absolute;
         right:28vw;
 
